convex ts and es config updated & convex docs

--- a/apps/convex/tsconfig.json
+++ b/apps/convex/tsconfig.json
@@ -4,11 +4,10 @@
     // Convex-specific overrides
     "lib": ["ESNext"],
     "target": "ESNext",
-    "module": "Preserve",
+    "module": "ESNext",
     "moduleDetection": "force",
-    "jsx": "react-jsx",
     "allowJs": true,
-    "moduleResolution": "bundler",
+    "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
